--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,maximum-scale=1">
     <meta http-equiv="content-language" content="id">
-    <link rel="canonical" href="#">
+    <meta name="google-site-verification" content="1NoSdHp18OJYZgGPY0aIoYvar8rv1M8XMtKkVFS29S8" />
+    <link rel="canonical" href="http://misa.yorba.org/">
     <!-- JUDUL -->
     <title>sablengtoto 🧲 SITUS JUDI ONLINE SLOT GACOR MUDAH MAXWIN</title>
     <!-- DESKRIPSI -->
